Log in
Skip to main content
Skip to sidebar
Linked Applications
Loading…
Dashboards
Projects
Issues
Give feedback to Atlassian
Help
Jira Core help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Qt Creator
QTCREATORBUG-33555
Saving files on remote linux devices fails
Log In
Closed
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Fixed
Priority:
P1: Critical
Fix Version/s:
Qt Creator 18.0.0-beta2
Affects Version/s:
Qt Creator 18.0.0-beta1
Component/s:
Remote Linux
Labels:
None
Commits:
3d44eb831 (18.0)
Description
SaveFile::commit() fails
Attachments
Gerrit Reviews
Options
Issue Only
Show All Reviews
Show Open Reviews
Show All Issues
Show Open Issues
No reviews matched the request. Check your Options in the drop-down menu of this sections header.
Activity
People
Assignee:
Eike Ziller
Reporter:
Eike Ziller
Votes:
0
Vote for this issue
Watchers:
2
Start watching this issue
Dates
Created:
23 Sep '25 08:56
Updated:
24 Sep '25 11:36
Resolved:
24 Sep '25 06:31
Gerrit Reviews
There are no open Gerrit changes
Show
There is 1 closed Gerrit change
Hide
There is 1 closed Gerrit change
FilePath: Fix resolveSymlinks on remote devices
Gerrit Review: