FilePath: Fix resolveSymlinks on remote devices

Make it independent from the behavior of pathAppended (operator/) with
an empty "source path".
pathAppended was overwriting the device part of the FilePath, but even
when this is fixed, it is a bit unclear what
FilePath("") actually means (root? "."? nothing?), and therefore also
unclear what appending a path to it means.

Amends 968135b74b660ac5849329c68276ded691c2f501

Fixes: QTCREATORBUG-33555
Change-Id: I9ea2d3423d58579e535226e7075ea1c781ff09ec
Reviewed-by: hjk <hjk@qt.io>
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>