src/libs/utils/filepath.cpp
@@ -2494,10 +2494,13 @@ FilePath FilePath::resolveSymlinks() const
     int links = 16;
     while (links--) {
         const QList<QStringView> components = current.pathComponents();
-        FilePath pathToTest = current.withNewPath("");
+        FilePath pathToTest;
         bool resolved = false;
-        for (const QStringView &path : components) {
-            pathToTest = pathToTest / path.toString();
+        for (const QStringView &component : components) {
+            if (pathToTest.isEmpty())
+                pathToTest = current.withNewPath(component.toString());
+            else
+                pathToTest = pathToTest / component.toString();
             if (!resolved) {
                 const FilePath target = pathToTest.symLinkTarget();
                 if (!target.isEmpty()) {
